<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HasilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_honda"
        android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/hasil_perhitungan_text"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_text"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            tools:text="@string/nama_text"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harga_motor_text"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            tools:text="@string/harga_motor_text"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dp_text"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="@string/dp_text"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pokok_hutang_text"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_pokok_hutang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            tools:text="@string/pokok_hutang_text"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenor_text"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_tenor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            tools:text="@string/tenor_text"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_bunga_text"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_total_bunga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            tools:text="@string/total_bunga_text"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_hutang_text"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_total_hutang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            tools:text="@string/total_hutang_text"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/angsuran_text"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_angsuran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            tools:text="@string/angsuran_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

</ScrollView>